# pinyin-grep

./: Cargo.toml  README.md  README.zh.md
src/: identifier.rs  lang.rs  main.rs  output.rs  patterns.rs  scanner.rs  score.rs  segment.rs  syllables.rs
tests/: integration.rs
tests/samples/: bar.rs  foo.ts
