[package]
name = "pinyin-grep"
version = "0.1.0"
edition = "2024"
description = "Detect Pinyin-named identifiers using ast-grep as an embedded library"
license = "MIT"

[dependencies]
ast-grep-core = { version = "0.42", features = ["tree-sitter"] }
ast-grep-language = "0.42"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ignore = "0.4"
regex = "1"
is-terminal = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
